# bwmd

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: lint.yml
src/: lib.rs  main.rs  tests.rs
