[package]
name = "bwmd"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
categories = ["algorithms", "artificial-intelligence"]
description = "Burrows-Wheeler Markov Distance. Use compression to measure similarity."
edition = "2024"
keywords = ["compression-distance", "machine-learning", "malware"]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/rjzak/bwmd"
rust-version = "1.85.0"
version = "0.0.1"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive", "std"], default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
